# RAG-app

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  custom_types.py  data_loader.py  docker-compose.yml  main.py  pyproject.toml  streamlit_app.py  vector_db.py
